--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -489,7 +489,7 @@ $('.update').click(function(){
             url: "http://211.159.165.47:14320/api/v1/serverupdate/"+server_id,
             data: strJson,
             success: function(data){
-              var result_str=JSON.parse(data)
+              var result_str=JSON.parse(data);
               if (result_str['code'] == 0){
                   swal({
                 title:'Congratulation',
