--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -490,18 +490,18 @@ $('.update').click(function(){
             data: strJson,
             success: function(data){
               console.log(data);
-              var result_str=JSON.parse(data);
-              if (result_str["code"] == 0){
+              var str_data=JSON.parse(data);
+              if (str_data['code'] == 0){
                   swal({
-                title:'Congratulation',
-                text:result_str["result"],
-                type:'success',
-                confirmButtonText:'确定'
-                },function(){
-                    location.href='/server/'
-                })
+                    title:'Congratulation',
+                    text:str_data['result'],
+                    type:'success',
+                    confirmButtonText:'确定'
+                    },function(){
+                        location.href='/server/'
+                    })
               }else{
-                  swal('Error',result_str["errmsg"],'error')
+                  swal('Error',str_data['errmsg'],'error')
               }
             }
           })
@@ -554,13 +554,13 @@ $('.detail').click(function(){
 // 	   data=JSON.parse(data)
 //     	if (data['code'] == 0){
 //     	    swal({
-//     		title:'Congratulation',
-//     		text:data['result'],
-//     		type:'success',
-//     		confirmButtonText:'确定'
-//     		},function(){
-//     		    location.href='/server/'
-//     		})
+//         		title:'Congratulation',
+//         		text:data['result'],
+//         		type:'success',
+//         		confirmButtonText:'确定'
+//         		},function(){
+//         		    location.href='/server/'
+//         		})
 //     	}else{
 //     	    swal('Error',data['errmsg'],'error')
 //     	}
