--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -490,7 +490,7 @@ $('.update').click(function(){
             data: strJson,
             success: function(data){
               console.log(data);
-              var str_data=JSON.parse(data);
+              var str_data=data;
               if (str_data['code'] == 0){
                   swal({
                     title:'Congratulation',
