--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -475,7 +475,7 @@ $('.update').click(function(){
             placeholder: "请选择",
             enableCaseInsensitiveFiltering: true
             })
-      $('#idc_name').multiselect('refresh');
+      // $('#idc_name').multiselect('refresh');
       // 机柜
       $("#updateForm #location").val(result.location);
       $("#updateForm #ip_address").val(result.ip_address);
