--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -471,7 +471,8 @@ $('.update').click(function(){
       var result = data.result;
       $("#updateForm #id").val(result.id);
       // 机房
-      $("#idc_name option:contains("+result.idc_name+")").attr("selected",true);
+      var idc_select = result.idc_name;
+      $("#idc_name option:contains("+idc_select+")").attr("selected",true);
       // 机柜
       $("#updateForm #location").val(result.location);
       $("#updateForm #ip_address").val(result.ip_address);
