--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -472,6 +472,7 @@ $('.update').click(function(){
       $("#updateForm #id").val(result.id);
       // 机房
       var idc_select = result.idc_name;
+      console.log(result.idc_name);
       $("#idc_name option:contains("+idc_select+")").attr("selected",true);
       // 机柜
       $("#updateForm #location").val(result.location);
