--- a/app/templates/server/testdata.html
+++ b/app/templates/server/testdata.html
@@ -21,6 +21,7 @@ $.ajax({
     }
   })
 var str = "Banana";
+console.log(str);
 $("#mySelect option:contains('"+str+"')").attr("selected",true);
 // var server_id = 8;
   // $.ajax({
