--- a/app/templates/server/testdata.html
+++ b/app/templates/server/testdata.html
@@ -12,18 +12,34 @@
   <option value="3">Pineapple</option>
   <option value="4">Banana</option>
 </select>
+<select id='idc_name' class='multiselect dropdown-toggle btn btn-default'>
+</select>
 <script type="text/javascript">
-$.ajax({
-    method: "GET",
-    url: "http://211.159.165.47:14320/api/v1/serverinfo/?id=8",
-    success: function(data){
-      console.log(data.result);
-    }
-  })
 var str = "Banana";
-
 console.log(typeof(str));
 $("#mySelect option:contains('"+str+"')").attr("selected",true);
+// idc_name
+$.get('http://211.159.165.47:14320/api/v1/idc/idcname',function(data){
+  console.log(data);
+     var idc_data = JSON.parse(data);
+     var idcnames = idc_data.result;
+     for(var i=0;i<idcnames.length;i++){
+          str += '<option value="'+idcnames[i]['id']+'">'+idcnames[i]['name']+'</option>'
+          }
+     $('#idc_name').html(str);
+})
+    $.ajax({
+        method: "GET",
+        url: "http://211.159.165.47:14320/api/v1/serverinfo/?id=8",
+        success: function(data){
+          var result = data.result;
+          // 机房
+          var idc_select = result.idc_name;
+          console.log(idc_select);
+          $("#idc_name option:contains('"+idc_select+"')").attr("selected",true);
+        }
+      })
+
 // var server_id = 8;
   // $.ajax({
   //   method: "POST",
