--- a/app/templates/server/testdata.html
+++ b/app/templates/server/testdata.html
@@ -14,35 +14,52 @@
 </select>
 <select id='idc_name' class='multiselect dropdown-toggle btn btn-default'>
 </select>
+<select id='cabinet_id' class='multiselect dropdown-toggle btn btn-default'>
+</select>
 <script type="text/javascript">
 var str1 = "Banana";
 console.log(typeof(str1));
 $("#mySelect option:contains('"+str1+"')").attr("selected",true);
 // $("#mySelect option[value='"+3+"']").attr('selected',true)
 // idc_name
-var str = "";
+var idc_str = "";
+var cabinet_str = "";
 $.get('http://211.159.165.47:14320/api/v1/idc/idcname',function(data){
   console.log(data);
      var idc_data = JSON.parse(data);
      var idcnames = idc_data.result;
      for(var i=0;i<idcnames.length;i++){
-          str += '<option value="'+idcnames[i]['id']+'">'+idcnames[i]['name']+'</option>'
+          idc_str += '<option value="'+idcnames[i]['id']+'">'+idcnames[i]['name']+'</option>'
           }
-     $('#idc_name').html(str);
+     $('#idc_name').html(idc_str);
 })
-    $.ajax({
-        method: "GET",
-        url: "http://211.159.165.47:14320/api/v1/serverinfo/?id=8",
-        success: function(data){
-          var result = data.result;
-          console.log(result);
-          // 机房
-          var idc_select = result.idc_name.toUpperCase();
-          console.log(idc_select);
-          $("#idc_name option:contains('"+idc_select+"')").attr("selected",true);
-          // $("#idc_name option:contains('TSN')").attr("selected",true);
-        }
+$.ajax({
+    method: "GET",
+    url: "http://211.159.165.47:14320/api/v1/serverinfo/?id=8",
+    success: function(data){
+      var result = data.result;
+      console.log(result);
+      // 机房
+      var idc_select = result.idc_name.toUpperCase();
+      console.log(idc_select);
+      $("#idc_name option:contains('"+idc_select+"')").attr("selected",true);
+      // 机房对应的机柜信息
+      var cabinet_select = result.cabinet_id;
+      var idc_id = $("#idc_name option:selected").val();
+      console.log(idc_id);
+      $.get('http://211.159.165.47:14320/api/v1/cabinet/cabinetname/'+idc_id, function(data){
+          var cabinet_data = JSON.parse(data);
+          var cabinets = cabinet_data.result;
+          console.log(cabinets)
+          for(var i=0;i<cabinets.length;i++){
+                cabinet_str += '<option value="'+cabinets[i]['idc_id']+'">'+cabinets[i]['name']+'</option>'
+                }
+           $('#cabinet_id').html(cabinet_str);
+           $("#cabinet_id option:contains('"+cabinet_select+"')").attr("selected",true);
       })
+
+    }
+  })
 
 // var server_id = 8;
   // $.ajax({
@@ -55,15 +72,7 @@ $.get('http://211.159.165.47:14320/api/v1/idc/idcname',function(data){
   //     console.log(data);
   //   }
   // })
-  $.ajax({
-    method: "GET",
-    url: "http://211.159.165.47:14320/api/v1/cabinet/cabinetname/5",
-    success: function(data){
-      var cabinet_data = JSON.parse(data);
-      var cabinets = cabinet_data.result;
-      console.log(cabinets)
-    }
-  })
+
 </script>
 </body>
 </html>
